[rel=preload] Set `initiatorType` property on nsITimedChannel properly for <link preload> initiated channels
Categories
(Core :: DOM: Networking, defect, P1)
Tracking
()
People
(Reporter: mayhemer, Assigned: mayhemer)
References
(Blocks 1 open bug)
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
Example how this is set for images.
All resource types we support preload for should properly set the initiatorType to either "link" or "preload" or "link-preload". Personal pref is "preload".
Updated•5 years ago
|
![]() |
Assignee | |
Comment 1•5 years ago
|
||
Related is bug 1624368 comment 10 and the following discussion, but my intent to add "preload ${type}" to the initiator is gone after reading the spec.
So, the initiator has to be "link" for all preloads.
![]() |
Assignee | |
Comment 2•5 years ago
|
||
![]() |
Assignee | |
Comment 3•5 years ago
|
||
This then also no longer blocks bug 1624368.
![]() |
Assignee | |
Comment 4•5 years ago
|
||
Comment on attachment 9151070 [details]
Bug 1639901 - Set PerformanceResourceTiming.initiatorType
to "link" on channel initiated by <link rel=preload>
tags, r=Harald
Beta/Release Uplift Approval Request
- User impact if declined: minimal, only not properly set property on resourceTiming of preloaded script
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky):
- String changes made/needed:
Comment 6•5 years ago
|
||
bugherder |
Comment 7•5 years ago
|
||
It's not clear to me from this bug and comment 4 why we need this in 78. What does this do and why does it matter? (AIUI rel=preload support is not shipping with 78.)
![]() |
Assignee | |
Comment 8•5 years ago
|
||
(In reply to Julien Cristau [:jcristau] from comment #7)
It's not clear to me from this bug and comment 4 why we need this in 78. What does this do and why does it matter? (AIUI rel=preload support is not shipping with 78.)
Preload is shipping on 78 (early Beta). This is a detail affecting performance API only when a js script is preloaded (the source is not correctly identified), the patch is simple enough and risk-free to be accepted to Beta.
Comment 9•5 years ago
|
||
(In reply to Honza Bambas (:mayhemer) from comment #8)
(In reply to Julien Cristau [:jcristau] from comment #7)
It's not clear to me from this bug and comment 4 why we need this in 78. What does this do and why does it matter? (AIUI rel=preload support is not shipping with 78.)
Preload is shipping on 78 (early Beta). This is a detail affecting performance API only when a js script is preloaded (the source is not correctly identified), the patch is simple enough and risk-free to be accepted to Beta.
"early beta" is not "shipping".
Comment 10•5 years ago
|
||
Comment on attachment 9151070 [details]
Bug 1639901 - Set PerformanceResourceTiming.initiatorType
to "link" on channel initiated by <link rel=preload>
tags, r=Harald
let's take this for 78.0b5 anyway...
Comment 11•5 years ago
|
||
bugherder uplift |
Description
•