Bug 1639901 - Set `PerformanceResourceTiming.initiatorType` to "link" on channel initiated by `<link rel=preload>` tags. r=hsivonen, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D76485